# free-will

./: CLAUDE.md
.claude/: settings.json  settings.local.json
.claude/free-will-claude-backup/: settings.local.json
FreeWillApp/FreeWillApp/: ContentView.swift  FreeWillApp.swift  Info.plist
FreeWillApp/FreeWillApp.xcodeproj/: project.pbxproj
FreeWillApp/FreeWillApp/Models/: Conversation.swift  FileItem.swift  Habit.swift  JournalEntry.swift  Message.swift
FreeWillApp/FreeWillApp/Services/: APIService.swift  KeychainService.swift  MarkdownRenderer.swift  WebSocketService.swift
FreeWillApp/FreeWillApp/ViewModels/: ChatViewModel.swift  DashboardViewModel.swift  HabitsViewModel.swift  JournalViewModel.swift
FreeWillApp/FreeWillApp/Views/Chat/: ChatInputBar.swift  ChatView.swift  ConversationListView.swift  MessageBubble.swift  MessageThreadView.swift
FreeWillApp/FreeWillApp/Views/Dashboard/: DashboardView.swift
FreeWillApp/FreeWillApp/Views/Habits/: HabitsView.swift
FreeWillApp/FreeWillApp/Views/Journal/: JournalDetailView.swift  JournalView.swift
config/: goals.yaml  schedule.yaml
data/: app.db-shm  app.db-wal
habits/: tracker.md
habits/journal/2026/: 2026-05-09.md
integrations/app-server/: README.md  pyproject.toml  start.sh
integrations/app-server/app/: auth.py  claude.py  config_parsers.py  credentials.py  db.py  habits.py  main.py  tools.py
integrations/app-server/app/routers/: chat.py  conversations.py  files.py  goals.py  habits.py  journal.py
templates/: daily-journal.md  person.md  weekly-review.md
(+3 files in other folders)
